feat: add file upload and report parsing functionalities
Co-authored-by: Genie <genie@cosine.sh>

--- a/templates/credit-report.html.twig
+++ b/templates/credit-report.html.twig
@@ -212,7 +212,7 @@
         <table style="text-align: center" class="size-100 border-none">
             <tr>
                 <td colspan="2" class="border-none">
-                    <img src="images/toyota-camry.png" /><br/>
+                    <img src="images/toyota-camery.png" /><br/>
                     Brand New Toyota Camry<br/>
                     $23,000<br/>
                     66-month term
