--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -43,7 +43,8 @@
                 </div>
                 <div class="form-group"> 
                     <input type="hidden" name="upload" value="true" />
-                    <label>File</label><input type="file" name="html_file" accept="text/html" />
+                    <input type="hidden" name="_token" value="{{ csrf_token('global_upload') }}">
+                    <label>File</label><input type="file" name="html_file" accept="text/html, text/htm, application/xhtml+xml" />
                     <span class="help-block">Select an HTML file to upload</span>
                     <input type="submit" name="submit" value="Upload" />
                 </div>
