--- a/templates/report/accounts-add.html.twig
+++ b/templates/report/accounts-add.html.twig
@@ -89,10 +89,10 @@
             {% endif %}
             <div class="row">
                 <div class="col-md-12">
-                    <form method="post" action="/accounts-add" class="form-horizontal">
-                        <input type="hidden" name="_token" value="{{ csrf_token('account_add_form') }}">
+                    {{ form_start(form, { attr: { class: 'form-horizontal' } }) }}
                         <div class="panel panel-default">
                             <div class="panel-body">
+                                {{ form_errors(form) }}
                                 <div class="form-group">
                                     <label for="first_name" class="col-md-3 col-xs-12 control-label">First Name:</label>
                                     <div class="col-md-6 col-xs-12">
