feat: add custom input group designs for account fields in form theme
Co-authored-by: Genie <genie@cosine.sh>

--- a/templates/form/form_theme.html.twig
+++ b/templates/form/form_theme.html.twig
@@ -68,3 +68,87 @@
         {{- parent() -}}
     </div>
 {%- endblock %}
+
+{% block _account_first_name_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-user"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_last_name_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-user"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_address1_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-map-marker"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_address2_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-map-marker"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_city_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-building"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_state_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-building"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_zip_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-hashtag"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_social_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-id-card"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_credit_company_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-briefcase"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_credit_company_user_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-user-circle"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_credit_company_password_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-lock"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
+
+{% block _account_credit_company_code_widget -%}
+    <div class="input-group">
+        <span class="input-group-addon"><span class="fa fa-key"></span></span>
+        {{- parent() -}}
+    </div>
+{%- endblock %}
