--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,6 +28,7 @@
                 {% endif %}
 
                 <form action="{{ path('app_login') }}" method="post" class="form-horizontal">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
                     <div class="form-group">
                         <div class="col-md-12">
                             <input type="text" class="form-control" name="_username" value="{{ last_username }}"
@@ -37,6 +38,11 @@
                     <div class="form-group">
                         <div class="col-md-12">
                             <input type="password" class="form-control" name="_password" placeholder="Password" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="text" class="form-control" name="mfa_code" placeholder="Multi-factor code (if enabled)" autocomplete="one-time-code" />
                         </div>
                     </div>
                     <div class="form-group">
