--- a/templates/report/accounts-view.html.twig
+++ b/templates/report/accounts-view.html.twig
@@ -152,12 +152,20 @@
                                     </tr>         
                                     <tr>
                                         <td><strong>Credit Reporting Password:</strong></td>
-                                        <td>{{ account_info.credit_company_password }}</td>
-                                    </tr>      
+                                        <td>
+                                            {% if account_info.credit_company_password is not empty %}
+                                                ••••••
+                                            {% endif %}
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td><strong>Credit Reporting Security Code:</strong></td>
-                                        <td>{{ account_info.credit_company_code }}</td>
-                                    </tr>            
+                                        <td>
+                                            {% if account_info.credit_company_code is not empty %}
+                                                ••••
+                                            {% endif %}
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td colspan="2"><a href="/accounts-edit?aid={{ account_info.aid }}">Edit</a></td>
                                     </tr>                                                                 
@@ -176,6 +184,7 @@
                                 <div style="margin: 8px 0 12px;">
                                     <a class="btn btn-primary" href="/simple-audit?file={{ files[0].filename }}" style="margin-right:8px;">Simple Audit (latest)</a>
                                     <a class="btn btn-default" href="/simple-audit.pdf?file={{ files[0].filename }}" target="_blank">Download PDF</a>
+                                    <a class="btn btn-success" href="{{ path('app_dispute_dashboard', { aid: account_info.aid }) }}" style="margin-left:8px;">Dispute Workspace</a>
                                 </div>
                             {% else %}
                                 <div class="alert alert-info" style="margin: 8px 0 12px;">
